src/snapshots/afrotd__parser__tests__rule_html_5.2.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            5.2.2 Strafe, die in einer neuen Serie resultiert
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Es ist eine neue Serie mit einer neuen Line to Gain, wenn:
            </p>
            <ol type="a">
                <li>eine Strafe den Ball im Besitz von Team A auf oder jenseits
                der Line to Gain belässt;
                </li>
                <li>in einer Strafe ein First Down festgesetzt ist.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.5.2.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
