src/snapshots/afrotd__parser__tests__rule_html_5.2.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            5.2.3 Foul vor dem Wechsel des Team Ballbesitzes
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Wird eine Strafe für ein Foul angenommen, welches sich
                zwischen den Goallines vor einem Wechsel des Team Ballbesitzes
                während des Downs ereignet hat, gehört der Ball zu Team A. Der
                Down soll wiederholt werden, außer die Strafe enthält einen
                Downverlust, schreibt einen First Down vor oder belässt den
                Ball auf oder jenseits der Line to Gain (Ausnahmen: Regeln
                8.3.3.b.1, 10.2.3, 10.2.4 und 10.2.5) (A.R. 10.2.3.I).
                </li>
                <li>Beinhaltet die Strafe einen Downverlust, wird der Down als
                einer von vieren in dieser Serie gewertet.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.5.2.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
