src/snapshots/afrotd__parser__tests__rule_html_5.2.5.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            5.2.5 Strafe abgelehnt
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Wird eine Strafe abgelehnt, muss die Nummer des nächsten Downs
                die Nummer sein, die sie gewesen wäre, wenn sich das Foul nicht
                ereignet hätte.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.5.2.5"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
